<resources>
  <string name="app_name">Stock Hawk</string>

  <string name="action_example">Example action</string>

  <string name="action_settings">Settings</string>
  <string name="action_change_units">Change Units</string>
  <string name="symbol_search">Symbol Search</string>
  <string name="content_test">Search for a Stock Symbol</string>
  <string name="input_hint" translatable="false">FB</string>
  <string name="input_prefill"></string>
  <string name="network_toast">Uh-oh! This app requires an internet connection</string>
  <string name="history_line_head">Stocks Data For Current Year</string>
  <string name="history_line_min">"Min :"</string>
  <string name="history_line_max">"Max :"</string>

  <string name="screen_Reader_graph">Stocks Graph</string>
  <string name="screen_Reader_fab">Stocks Search or Add Button</string>
  <string name="screen_Reader_stock">Stocks Name</string>
  <string name="screen_Reader_price">Stocks Price</string>
  <string name="screen_Reader_change">Stocks Change</string>
  <string name="screen_Reader_min">Stocks Min</string>
  <string name="screen_Reader_max">Stocks Max</string>
  <string name="screen_Reader_error">Something Unexpected Error Occurred</string>
  <string name="screen_Reader_error_internet">Internet connection not found</string>
  <string name="error_no_internet">Internet may be not working, showing local data instead</string>
  <string name="empty_view_text">Stocks are loading</string>
  <string name="fav_stock">Your Favourite Stocks</string>
  <string name="stocks" translatable="false">"Stocks"</string>
  <string name="stocks_tag" translatable="false">tag</string>
  <string name="stocks_toast">This stock is already saved!</string>
  <string name="data_extra" translatable="false">"finance_charts_json_callback( "</string>

</resources>
